Related to "In layer lookup with other themes than Tomahawk the buttons inside (loopup and calendar buttons) don't show" (https://issues.apache.org/jira/browse/OFBIZ-3656) - OFBIZ-3656
I wanted to commit all changes at the same time but I cross more problems than I thought and prefer to get rid of them as soon they are solved...
Actually it may look like a minor issue but it's not because without these buttons you can't use the related feature

Fix an issue in TomaHawk where the "buttons" at bottom of calendar (actually text in white) where not showing when the calendar was called from a lookup


git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@932563 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/tomahawk/webapp/tomahawk/css/style.css
+++ b/themes/tomahawk/webapp/tomahawk/css/style.css
@@ -2188,7 +2188,7 @@ width: 61px;
 }
 
 .calendar_date_select .cds_buttons a {
-color: #fff;
+color: white !important;
 font-size: 9px;
 background: none !important;
 display: inline !important;
